# release-cli

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  rustfmt.yml
src/: build.rs  lib.rs  main.rs  release.rs
