[package]
name = "release-cli"
version = "0.2.0-alpha"
edition = "2021"
repository = "https://github.com/packify-dev/release-cli"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
git2 = "0.19.0"
octocrab = "0.42.1"
semver = "1.0.24"
serde = "1.0.216"
toml = "0.8.19"
toml_edit = "0.22.22"
